--- a/sec_risks.ipynb
+++ b/sec_risks.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -132,22 +132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data(data):\n",
-    "    data = data.lower()  \n",
+    "    base_data = data.lower()  \n",
     "#    removing the \\t and \\n characters\n",
     "    # data = data.replace('\\t',' ').replace('\\n',' ')\n",
     "\n",
     "#    removing TABLE OF CONTENTS to PART I      \n",
-    "    clean = re.compile(r\"(?<=TABLE OF CONTENTS)(.*)(?=PART I)\")\n",
-    "    data = re.sub(clean,\" \",data)\n",
+    "    # clean = re.compile(r\"(?<=TABLE OF CONTENTS)(.*)(?=PART I)\")\n",
+    "    # base_data = re.sub(clean,\" \",data)\n",
     "\n",
     "#    keeping the string between the two Item 1A. and Item 1B.   \n",
-    "    data = re.findall(r\"item 1a\\.(.+?)item 1b\\.\",data)\n",
-    "    data = \" \".join(data)\n",
+    "    data1 = re.findall(r\"item 1a\\.(.+?)item 1b\\.\",base_data)\n",
+    "    data = \" \".join(data1)\n",
+    "\n",
+    "#    keeping the string between the two Item 7. and Item 8.   \n",
+    "    data2 = re.findall(r\"item 7a\\.(.+?)item 8\\.\",base_data)\n",
+    "    data = data.join(data2)\n",
     "\n",
     "    data = data.replace('&#8217;',\"'\").replace('&#39;', \"'\")\n",
     "\n",
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -280,9 +284,9 @@
     "        for (url, doc_name) in docs:\n",
     "            r = requests.get(url)\n",
     "            data = r.text\n",
-    "            # data1 = clean_data(data)\n",
-    "            data1 = data \n",
-    "                       \n",
+    "            data1 = clean_data(data)\n",
+    "            # data1 = data \n",
+    "\n",
     "            # path = os.path.join(self.data_path, company_code, cik,\n",
     "            #                     filing_type, doc_name)\n",
     "            path = os.path.join(self.data_path, company_code, doc_name)\n",
@@ -387,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +429,7 @@
       "Number of files to download: 20\n",
       "Starting download...\n",
       "Successfully downloaded all the files\n",
-      "Total time taken: 8.658684253692627\n"
+      "Total time taken: 6.928030014038086\n"
      ]
     }
    ],
